# AI-Text-Editor

./: AI-Text-Editor.7z  README.md  ai_handler.py  config_manager.py  hotkey_manager.py  main.py  pyproject.toml  requirements.txt  test.py  text_extractor.py  update_translations.bat
locales/ar/LC_MESSAGES/: messages.po
locales/en/LC_MESSAGES/: messages.po
locales/es/LC_MESSAGES/: messages.po
ui/: instruction_dialog.py  options_dialog.py  settings_dialog.py  style_dialog.py
